--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>PAUSD Contact Tracing</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+            crossorigin="anonymous"
+        />
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+            crossorigin="anonymous"
+        ></script>
     </head>
     <body>
-        <script>
-            window.onload((window.location += 'html/TeacherView'));
-        </script>
+        <a class="btn btn-primary btn-sm" href="html/Admin.html" role="button">Admin Page</a>
+        <a class="btn btn-primary btn-sm" href="html/TeacherView.html" role="button">Teacher Page</a>
     </body>
 </html>
